force-app/main/default/objects/Dermal_Filler_S__c/Dermal_Filler_S__c.object-meta.xml
<CustomObject>
    <label>Dermal Filler(S)</label>
    <nameField>
        <label>Dermal Filler(S) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dermal Filler(S)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>