force-app/main/default/objects/Dermal_Filler_S__c/fields/Dermal_Filler__c.field-meta.xml
<CustomField>
    <fullName>Dermal_Filler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dermal Filler</label>
    <referenceTo>Dermal_Filler__c</referenceTo>
    <relationshipLabel>Dermal Filler(S)</relationshipLabel>
    <relationshipName>Dermal_Filler_S</relationshipName>
    <type>Lookup</type>
</CustomField>