force-app/main/default/objects/Dermal_Filler_S__c/fields/Dermal_Filler_Procedure_Injectable__c.field-meta.xml
<CustomField>
    <fullName>Dermal_Filler_Procedure_Injectable__c</fullName>
    <label>Dermal Filler Procedure Injectable</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Botox</fullName>
            </value>
            <value>
                <fullName>Dysport</fullName>
            </value>
            <value>
                <fullName>Restylane</fullName>
            </value>
            <value>
                <fullName>Restylane Contour</fullName>
            </value>
            <value>
                <fullName>Restylane Defyne</fullName>
            </value>
            <value>
                <fullName>Restylane Refyne</fullName>
            </value>
            <value>
                <fullName>Restylane Lyft</fullName>
            </value>
            <value>
                <fullName>Restylane Silk</fullName>
            </value>
            <value>
                <fullName>Sculptra Aesthetic</fullName>
            </value>
            <value>
                <fullName>Volbella</fullName>
            </value>
            <value>
                <fullName>Voluma</fullName>
            </value>
            <value>
                <fullName>Vollure</fullName>
            </value>
            <value>
                <fullName>Juvederm Ultra</fullName>
            </value>
            <value>
                <fullName>Juvederm Ultra Plus</fullName>
            </value>
            <value>
                <fullName>Restylane Kysse</fullName>
            </value>
            <value>
                <fullName>Hylenex</fullName>
            </value>
            <value>
                <fullName>Volux</fullName>
            </value>
            <value>
                <fullName>Skinvive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>