force-app/main/default/objects/Dermal_Filler_S__c/fields/Dermal_Filler_Procedure_Lot__c.field-meta.xml
<CustomField>
    <fullName>Dermal_Filler_Procedure_Lot__c</fullName>
    <label>Dermal Filler Procedure Lot#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>